chore: adjust packages

--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -6,7 +6,7 @@
   -->
   <ItemGroup>
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageVersion Include="SkiaSharp" Version="2.88.8" />
     <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.8" />
     <PackageVersion Include="SkiaSharp.NativeAssets.iOS" Version="2.88.8" />
@@ -24,11 +24,14 @@
 
     <PackageVersion Include="Microsoft.Maui.Controls" Version="8.0.3" />
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.3" />
-    <PackageVersion Include="Microsoft.Maui.Graphics" Version="8.0.3"  />\
-  </ItemGroup>
+    <PackageVersion Include="Microsoft.Maui.Graphics" Version="8.0.3"  />
 
-	<PropertyGroup>
-		<AndroidXCollectionVersion>1.4.3.1</AndroidXCollectionVersion>
-		<AndroidXNavigationVersion>2.7.7.6</AndroidXNavigationVersion>
-	</PropertyGroup>
+    <PackageVersion Include="Xamarin.AndroidX.Navigation.UI" Version="2.7.7.1" />
+    <PackageVersion Include="Xamarin.AndroidX.Navigation.Fragment" Version="2.7.7.1"/>
+    <PackageVersion Include="Xamarin.AndroidX.Navigation.Runtime" Version="2.7.7.1"/>
+    <PackageVersion Include="Xamarin.AndroidX.Navigation.Common" Version="2.7.7.1"/>
+    <PackageVersion Include="Xamarin.AndroidX.Collection" Version="1.4.0.1"/>
+    <PackageVersion Include="Xamarin.AndroidX.Collection.Ktx" Version="1.4.0.1" />
+    <PackageVersion Include="Xamarin.AndroidX.Collection.Jvm" Version="1.4.0.1" />
+  </ItemGroup>
 </Project>
