--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -19,6 +19,7 @@
         <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
         <PackageVersion Include="Microsoft.Identity.Client" Version="4.61.3" />
         <PackageVersion Include="Microsoft.Identity.Client.Extensions.Msal" Version="4.61.3" />
+        <PackageVersion Include="Microsoft.Identity.Client.Desktop" Version="4.61.3" />
         <PackageVersion Include="Microsoft.Maui.Controls" Version="8.0.3" />
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.3" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
@@ -49,7 +50,7 @@
         <PackageVersion Include="Uno.Extensions.Markup.Generators" Version="5.3.12" />
         <PackageVersion Include="Uno.Extensions.Markup.WinUI" Version="5.3.12" />
         <PackageVersion Include="Uno.Roslyn" Version="1.3.0-dev.12" />
-        <PackageVersion Include="Uno.Toolkit" Version="6.1.8" />
+        <PackageVersion Include="Uno.Toolkit" Version="6.3.6" />
         <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="$(UnoVersion)" />
         <PackageVersion Include="Uno.UI.RuntimeTests.Engine" Version="0.37.0-dev.126" />
         <PackageVersion Include="Uno.WinUI" Version="$(UnoVersion)" />
