--- a/testing/TestHarness/TestHarness/TestHarness.csproj
+++ b/testing/TestHarness/TestHarness/TestHarness.csproj
@@ -43,7 +43,21 @@
 		<DefineConstants>$(DefineConstants);USE_UITESTS</DefineConstants>
 	</PropertyGroup>
 
-
+	<ItemGroup>
+	  <EmbeddedResource Include="Ext\Authentication\Custom\appsettings.dummyjson.json" />
+	  <EmbeddedResource Include="Ext\Authentication\Custom\appsettings.testbackend.json" />
+	  <EmbeddedResource Include="Ext\Authentication\Msal\appsettings.msal.json" />
+	  <EmbeddedResource Include="Ext\Authentication\Msal\appsettings.msalauthentication.json" />
+	  <EmbeddedResource Include="Ext\Authentication\Msal\appsettings.multi.json" />
+	  <EmbeddedResource Include="Ext\Authentication\Oidc\appsettings.oidc.json" />
+	  <EmbeddedResource Include="Ext\Authentication\Web\appsettings.webauth.json" />
+	  <EmbeddedResource Include="Ext\Authentication\Web\appsettings.webauthsettings.json" />
+	  <EmbeddedResource Include="Ext\Core\Storage\appsettings.storage.json" />
+	  <EmbeddedResource Include="Ext\Http\Endpoints\appsettings.httpendpoints.json" />
+	  <EmbeddedResource Include="Ext\Http\Refit\appsettings.httprefit.json" />
+	  <EmbeddedResource Include="Ext\Localization\appsettings.locale.json" />
+	  <EmbeddedResource Include="Ext\Navigation\Apps\Commerce\appsettings.logging.json" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\src\Uno.Extensions.Authentication.Oidc\Uno.Extensions.Authentication.Oidc.WinUI.csproj" />
@@ -75,9 +89,9 @@
 		<ProjectReference Include="..\..\..\src\Uno.Extensions.Validation.Fluent\Uno.Extensions.Validation.Fluent.csproj" />
 		<ProjectReference Include="..\TestHarness.Core\TestHarness.Core.csproj" />
 
-		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton"/>
+		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" />
 		<PackageReference Include="Uno.WinUI" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging"/>
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
 		<!--<PackageReference Include="Uno.Wasm.Bootstrap" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" />
 		<PackageReference Include="Uno.Resizetizer" />-->
