--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -1,37 +1,13 @@
 <Project ToolsVersion="15.0">
-  <!--
-    To update the version of Uno, you should instead update the Sdk version in the global.json file.
+  <Import Project="$(MSBuildThisFileDirectory)..\..\SamplePackages.props" />
 
-    See https://aka.platform.uno/using-uno-sdk for more information.
-  -->
   <ItemGroup>
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-    <PackageVersion Include="SkiaSharp" Version="2.88.8" />
-    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.8" />
-    <PackageVersion Include="SkiaSharp.NativeAssets.iOS" Version="2.88.8" />
-    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.8" />
     <PackageVersion Include="Syncfusion.Maui.Core" Version="22.2.9" />
     <PackageVersion Include="Syncfusion.Maui.Charts" Version="22.2.9" />
     <PackageVersion Include="Syncfusion.Maui.DataGrid" Version="22.2.9" />
-    <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.1.1" />
-    <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
-    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="$(UnoVersion)" />
     <PackageVersion Include="Telerik.UI.for.Maui" Version="5.1.0" Condition="$(_UseTelerik)" />
     <PackageVersion Include="Esri.ArcGISRuntime.Maui" Version="200.1.0" />
     <PackageVersion Include="Microsoft.Windows.Compatibility" Version="7.0.4" />
-    <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.7.0" />
 
-    <PackageVersion Include="Microsoft.Maui.Controls" Version="8.0.3" />
-    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.3" />
-    <PackageVersion Include="Microsoft.Maui.Graphics" Version="8.0.3"  />
-
-    <PackageVersion Include="Xamarin.AndroidX.Navigation.UI" Version="2.7.7.1" />
-    <PackageVersion Include="Xamarin.AndroidX.Navigation.Fragment" Version="2.7.7.1"/>
-    <PackageVersion Include="Xamarin.AndroidX.Navigation.Runtime" Version="2.7.7.1"/>
-    <PackageVersion Include="Xamarin.AndroidX.Navigation.Common" Version="2.7.7.1"/>
-    <PackageVersion Include="Xamarin.AndroidX.Collection" Version="1.4.0.1"/>
-    <PackageVersion Include="Xamarin.AndroidX.Collection.Ktx" Version="1.4.0.1" />
-    <PackageVersion Include="Xamarin.AndroidX.Collection.Jvm" Version="1.4.0.1" />
   </ItemGroup>
 </Project>
