--- a/samples/Playground/Directory.Packages.props
+++ b/samples/Playground/Directory.Packages.props
@@ -1,21 +1,10 @@
 <Project ToolsVersion="15.0">
+	<Import Project="$(MSBuildThisFileDirectory)..\..\SamplePackages.props" />
+
 	<ItemGroup>
-		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.1" />
-		<PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageVersion Include="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
-		<PackageVersion Include="Microsoft.Windows.Compatibility" Version="7.0.3" />
 		<PackageVersion Include="Refit" Version="7.2.22" />
 		<PackageVersion Include="Refit.HttpClientFactory" Version="7.2.22" />
-		<PackageVersion Include="SkiaSharp.Views" Version="2.88.7" />
-		<PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.7" />
-		<PackageVersion Include="SkiaSharp.Skottie" Version="2.88.7" />
 		<PackageVersion Include="System.Text.Json" Version="8.0.5" />
-		<PackageVersion Include="Uno.Core" Version="4.1.1" />
-		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.1.1" />
-		<PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
-		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.7.0" />
-		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="$(UnoVersion)" />
 	</ItemGroup>
 </Project>
