test: Ensure duplicated navigation wont happen
(cherry picked from commit 5d63323a2b2dea874db6bb3c4d1b1eaface264a2)

--- a/testing/TestHarness/TestHarness/TestHarness.csproj
+++ b/testing/TestHarness/TestHarness/TestHarness.csproj
@@ -56,6 +56,7 @@
 	  <EmbeddedResource Include="Ext\Http\Endpoints\appsettings.httpendpoints.json" />
 	  <EmbeddedResource Include="Ext\Http\Refit\appsettings.httprefit.json" />
 	  <EmbeddedResource Include="Ext\Localization\appsettings.locale.json" />
+	  <EmbeddedResource Include="Ext\Navigation\AddressBar\appsettings.addressbar.json" />
 	  <EmbeddedResource Include="Ext\Navigation\Apps\Commerce\appsettings.logging.json" />
 	</ItemGroup>
 
