--- a/src/Uno.Extensions.Http.Kiota/Uno.Extensions.Http.Kiota.csproj
+++ b/src/Uno.Extensions.Http.Kiota/Uno.Extensions.Http.Kiota.csproj
@@ -12,7 +12,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
     <PackageReference Include="Microsoft.Kiota.Abstractions" />
     <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" />
+    <PackageReference Include="Microsoft.Kiota.Serialization.Form" />
     <PackageReference Include="Microsoft.Kiota.Serialization.Json" />
+    <PackageReference Include="Microsoft.Kiota.Serialization.Multipart" />
+    <PackageReference Include="Microsoft.Kiota.Serialization.Text" />
   </ItemGroup>
 
 	<ItemGroup>
