--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -19,7 +19,10 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Kiota.Abstractions" Version="1.11.0" />
     <PackageVersion Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.11.0" />
+    <PackageVersion Include="Microsoft.Kiota.Serialization.Form" Version="1.11.0" />
     <PackageVersion Include="Microsoft.Kiota.Serialization.Json" Version="1.11.0" />
+    <PackageVersion Include="Microsoft.Kiota.Serialization.Multipart" Version="1.11.0" />
+    <PackageVersion Include="Microsoft.Kiota.Serialization.Text" Version="1.11.0" />
     <PackageVersion Include="MSTest.TestAdapter" Version="2.2.9" />
     <PackageVersion Include="MSTest.TestFramework" Version="2.2.9" />
     <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
