fix: Add back support for MSAL auth through WAM

--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
@@ -66,7 +66,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.Contains('windows10'))">
-		<PackageReference Include="Microsoft.Identity.Client.Desktop" />
+		<PackageReference Include="Microsoft.Identity.Client.Broker" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(IsBrowserWasm)'!='true'">
