docs: Add msal window changes to docs
(cherry picked from commit eb0a4568164e739fd1d14a549cb2ba2cb19b0cb6)

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -5,6 +5,8 @@
       href: xref:Uno.Extensions.Overview
     - name: "How-To: Getting Started"
       href: xref:Uno.Extensions.HowToGettingStarted
+    - name: "Upgrading Extensions Version"
+      href: xref:Uno.Extensions.Migration
     - name: Authentication
       href: Learn/Authentication/toc.yml
       topicHref: xref:Uno.Extensions.Authentication.Overview
