chore: fix package file name
ci: fix

--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -1,5 +1,5 @@
 <Project ToolsVersion="15.0">
-  <Import Project="$(MSBuildThisFileDirectory)..\..\SamplePackages.props" />
+  <Import Project="$(MSBuildThisFileDirectory)..\Directory.Packages.props" />
 
   <ItemGroup>
     <PackageVersion Include="Syncfusion.Maui.Core" Version="22.2.9" />
