--- a/samples/Playground/Directory.Packages.props
+++ b/samples/Playground/Directory.Packages.props
@@ -1,5 +1,5 @@
 <Project ToolsVersion="15.0">
-	<Import Project="$(MSBuildThisFileDirectory)..\..\SamplePackages.props" />
+	<Import Project="$(MSBuildThisFileDirectory)..\Directory.Packages.props" />
 
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
