--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -1,47 +1,47 @@
 <Project ToolsVersion="15.0">
-	<Import Project="$(MSBuildThisFileDirectory)..\..\samples\Directory.Packages.props" />
-	<ItemGroup>
-		<PackageVersion Include="CommunityToolkit.WinUI.UI" Version="7.1.2" />
-		<PackageVersion Include="FluentAssertions" Version="6.12.0" />
-		<PackageVersion Include="FluentValidation" Version="11.4.0" />
-		<PackageVersion Include="IdentityModel.OidcClient" Version="5.0.0" />
-		<PackageVersion Include="AspNet.Security.OAuth.Apple" Version="6.0.4" />
-		<PackageVersion Include="MSTest.TestAdapter" Version="2.2.9" />
-		<PackageVersion Include="MSTest.TestFramework" Version="2.2.9" />
-		<PackageVersion Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.7" />
-		<PackageVersion Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.7" />
-		<PackageVersion Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="6.0.7" />
-		<PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.1" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
-		<PackageVersion Include="Microsoft.Identity.Client" Version="4.66.2" />
-		<PackageVersion Include="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
-		<PackageVersion Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.11" />
-		<PackageVersion Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" />
-		<!--<PackageVersion Include="Microsoft.Toolkit.Uwp.UI" Version="7.1.2" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\samples\Directory.Packages.props" />
+  <ItemGroup>
+    <PackageVersion Include="CommunityToolkit.WinUI.UI" Version="7.1.2" />
+    <PackageVersion Include="FluentAssertions" Version="6.12.0" />
+    <PackageVersion Include="FluentValidation" Version="11.4.0" />
+    <PackageVersion Include="IdentityModel.OidcClient" Version="5.0.0" />
+    <PackageVersion Include="AspNet.Security.OAuth.Apple" Version="6.0.4" />
+    <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
+    <PackageVersion Include="MSTest.TestAdapter" Version="2.2.9" />
+    <PackageVersion Include="MSTest.TestFramework" Version="2.2.9" />
+    <PackageVersion Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.7" />
+    <PackageVersion Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.7" />
+    <PackageVersion Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="6.0.7" />
+    <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Identity.Client" Version="4.66.2" />
+    <PackageVersion Include="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
+    <PackageVersion Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.11" />
+    <PackageVersion Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" />
+    <!--<PackageVersion Include="Microsoft.Toolkit.Uwp.UI" Version="7.1.2" />
 		<PackageVersion Include="Microsoft.UI.Xaml" Version="2.8.5" />-->
-		<!--<PackageVersion Include="Microsoft.Web.WebView2" Version="1.0.2365.46" />-->
-		<PackageVersion Include="Refit" Version="7.2.22" />
-		<PackageVersion Include="Refit.HttpClientFactory" Version="7.2.22" />
-		<PackageVersion Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-		<PackageVersion Include="System.ComponentModel.Annotations" Version="5.0.0" />
-		<PackageVersion Include="Uno.CommunityToolkit.WinUI.UI" Version="7.1.100" />
-		<PackageVersion Include="Uno.UITest" Version="1.1.0-dev.70" />
-		<PackageVersion Include="Uno.UITest.Selenium" Version="1.1.0-dev.70" />
-		<PackageVersion Include="Uno.UITest.Xamarin" Version="1.1.0-dev.70" />
-		<PackageVersion Include="Uno.UITest.Helpers" Version="1.1.0-dev.70" />
-		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-		<PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageVersion Include="NUnit" Version="4.1.0" />
-		<PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
-		<PackageVersion Include="NunitXml.TestLogger" Version="3.0.131" />
-		<PackageVersion Include="Xamarin.Google.Android.Material" Version="1.5.0.13" />
-		<PackageVersion Include="Xamarin.UITest" Version="4.3.4" />
-		<PackageVersion Include="coverlet.collector" Version="6.0.2" />
-		<PackageVersion Include="System.Collections.Immutable" Version="8.0.0" />
-
-		<PackageVersion Include="System.Private.Uri" Version="4.3.2" />
-		<PackageVersion Include="System.Net.Http" Version="4.3.4" />
-		<PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
-		<PackageVersion Include="System.Text.Json" Version="8.0.5" />
-	</ItemGroup>
+    <!--<PackageVersion Include="Microsoft.Web.WebView2" Version="1.0.2365.46" />-->
+    <PackageVersion Include="Refit" Version="7.2.22" />
+    <PackageVersion Include="Refit.HttpClientFactory" Version="7.2.22" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageVersion Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageVersion Include="Uno.CommunityToolkit.WinUI.UI" Version="7.1.100" />
+    <PackageVersion Include="Uno.UITest" Version="1.1.0-dev.70" />
+    <PackageVersion Include="Uno.UITest.Selenium" Version="1.1.0-dev.70" />
+    <PackageVersion Include="Uno.UITest.Xamarin" Version="1.1.0-dev.70" />
+    <PackageVersion Include="Uno.UITest.Helpers" Version="1.1.0-dev.70" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageVersion Include="NUnit" Version="4.1.0" />
+    <PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageVersion Include="NunitXml.TestLogger" Version="3.0.131" />
+    <PackageVersion Include="Xamarin.Google.Android.Material" Version="1.5.0.13" />
+    <PackageVersion Include="Xamarin.UITest" Version="4.3.4" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.2" />
+    <PackageVersion Include="System.Collections.Immutable" Version="8.0.0" />
+    <PackageVersion Include="System.Private.Uri" Version="4.3.2" />
+    <PackageVersion Include="System.Net.Http" Version="4.3.4" />
+    <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
+    <PackageVersion Include="System.Text.Json" Version="8.0.5" />
+  </ItemGroup>
 </Project>
