--- a/testing/TestHarness/TestBackend/TestBackend.csproj
+++ b/testing/TestHarness/TestBackend/TestBackend.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
 		<PackageReference Include="Swashbuckle.AspNetCore" />
 		<PackageReference Include="AspNet.Security.OAuth.Apple" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" />
