--- a/src/Uno.Extensions.Core.UI/Uno.Extensions.Core.WinUI.csproj
+++ b/src/Uno.Extensions.Core.UI/Uno.Extensions.Core.WinUI.csproj
@@ -25,5 +25,7 @@
 	<ItemGroup>
 		<InternalsVisibleTo Include="Uno.Extensions.Hosting.UWP" />
 		<InternalsVisibleTo Include="Uno.Extensions.Hosting.WinUI" />
+
+		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 </Project>
