--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -1,5 +1,8 @@
 <Project ToolsVersion="15.0">
   <Import Project="$(MSBuildThisFileDirectory)..\..\samples\Directory.Packages.props" />
+  <PropertyGroup>
+    <UnoLoggingVersion>1.9.0-dev.2</UnoLoggingVersion>
+  </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="CommunityToolkit.WinUI.UI" Version="7.1.2" />
     <PackageVersion Include="FluentAssertions" Version="6.12.0" />
