docs(storage): Add storage related links to Storage Extensions
chore: Add Storage to Extensions Overview

chore: Moved file from PR 2734

will be refactored into separate files per function

chore: Small adjustments in the includes files

Making sure the current in preparation of the Storage how to section content is up to date or if there are still needed contents or not needed content

chore(Storage): Add How To for Storage Part 1

chore: tryed to improve wording

docs(StorageOverview): Add appropriate introduction and Overview to Storage docs

chore: Move Getting Started includes to the seperated Getting Started page
chore: Set up a detailed Getting Started so new developers will have a working setup to start with

chore: Spellcheck

chore: Small Layout adjustments

chore: Spell checking

chore: Formatting

chore: Formatting

chore: Formatting

chore: Add word to cspell dict

--- a/doc/Learn/Storage/toc.yml
+++ b/doc/Learn/Storage/toc.yml
@@ -1,4 +1,13 @@
 - name: Overview
   href: xref:Uno.Extensions.Storage.Overview
-- name: "How-To: Add Required Entitlements"
+- name: Getting Started with Storage Extensions
+  href: xref:Uno.Extensions.Storage.GettingStarted
+- name: Handling Package Files
+  topicHref: xref:Uno.Extensions.Storage.GettingStarted
+  items:
+    - name: Introduction
+      href: xref:Uno.Extensions.Storage.PackageFiles.Intro
+    - name: How To: Handling Package files
+      href: xref:Uno.Extensions.Storage.PackageFiles.HowToPackageFiles
+- name: How-To: Add Required Entitlements on Apple Platforms
   href: xref:Uno.Extensions.Storage.HowToRequiredEntitlements
