--- a/src/Uno.Extensions.Authentication.Oidc/Uno.Extensions.Authentication.Oidc.WinUI.csproj
+++ b/src/Uno.Extensions.Authentication.Oidc/Uno.Extensions.Authentication.Oidc.WinUI.csproj
@@ -37,7 +37,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" />
-		<PackageReference Include="IdentityModel.OidcClient" />
+		<PackageReference Include="Duende.IdentityModel.OidcClient" />
 	</ItemGroup>
 
 	<ItemGroup>
