--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -4,7 +4,7 @@
     <PackageVersion Include="CommunityToolkit.WinUI.UI" Version="7.1.2" />
     <PackageVersion Include="FluentAssertions" Version="6.12.0" />
     <PackageVersion Include="FluentValidation" Version="11.4.0" />
-    <PackageVersion Include="IdentityModel.OidcClient" Version="5.0.0" />
+    <PackageVersion Include="Duende.IdentityModel.OidcClient" Version="6.0.1" />
     <PackageVersion Include="AspNet.Security.OAuth.Apple" Version="6.0.4" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
     <PackageVersion Include="Microsoft.IdentityModel.Tokens" Version="7.1.2" />
