feat(storage): Added Overload for ReadPackageFileAsync
Overloads allows providing specific lines for the return. Useful in cases its for example txt file, which has no ISerializer like for Json or xaml format.

--- a/.editorconfig
+++ b/.editorconfig
@@ -33,6 +33,8 @@ indent_style = space
 
 [*.md]
 indent_style = space
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.cs]
 # http://kent-boogaart.com/blog/editorconfig-reference-for-c-developers#csharp_indent_block_contents
