chore: Align with uno's WindowsSdkPackageVersion version

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -21,6 +21,8 @@
 	<PropertyGroup>
 		<!-- Forces Uno's XamlFileGenerator to write error when XAML is invalid-->
 		<ShouldWriteErrorOnInvalidXaml>True</ShouldWriteErrorOnInvalidXaml>
+		<!-- Required by uno 6.0 (WinRT.Runtime.dll >= 2.2.0) -->
+		<WindowsSdkPackageVersion>10.0.19041.57</WindowsSdkPackageVersion>
 	</PropertyGroup>
 
 	<PropertyGroup>
