--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -56,7 +56,7 @@
     <PackageVersion Include="Uno.Extensions.Markup.Generators" Version="5.3.12" />
     <PackageVersion Include="Uno.Extensions.Markup.WinUI" Version="5.3.12" />
     <PackageVersion Include="Uno.Roslyn" Version="1.3.0-dev.12" />
-    <PackageVersion Include="Uno.Toolkit" Version="6.4.1" />
+    <PackageVersion Include="Uno.Toolkit" Version="7.1.0-dev.4" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="$(UnoVersion)" />
     <PackageVersion Include="Uno.UI.RuntimeTests.Engine" Version="0.37.0-dev.126" />
     <PackageVersion Include="Uno.WinUI" Version="$(UnoVersion)" />
