chore(StorageSamples): Update and review sample functions

--- a/doc/Learn/Storage/toc.yml
+++ b/doc/Learn/Storage/toc.yml
@@ -2,12 +2,7 @@
   href: xref:Uno.Extensions.Storage.Overview
 - name: Getting Started with Storage Extensions
   href: xref:Uno.Extensions.Storage.GettingStarted
-- name: Handling Package Files
-  topicHref: xref:Uno.Extensions.Storage.GettingStarted
-  items:
-    - name: Introduction
-      href: xref:Uno.Extensions.Storage.PackageFiles.Intro
-    - name: How To: Handling Package files
-      href: xref:Uno.Extensions.Storage.PackageFiles.HowToPackageFiles
+- name: How To: Handling Package files
+  href: xref:Uno.Extensions.Storage.HowToPackageFiles
 - name: How-To: Add Required Entitlements on Apple Platforms
   href: xref:Uno.Extensions.Storage.HowToRequiredEntitlements
