chore: Allow unsafe code

--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
@@ -21,6 +21,10 @@
 		<PackageReference Include="Uno.WinUI.MSAL" />
 	</ItemGroup>
 
+	<PropertyGroup Condition="$(TargetFramework.Contains('windows10'))">
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
+
 	<PropertyGroup Condition="$(TargetFramework.ToLower().StartsWith('net6')) and $(_IsAndroid)">
 		<SupportedOSPlatformVersion>31.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion>31.0</TargetPlatformMinVersion>
