--- a/src/Uno.Extensions.Maui.UI/Uno.Extensions.Maui.WinUI.csproj
+++ b/src/Uno.Extensions.Maui.UI/Uno.Extensions.Maui.WinUI.csproj
@@ -9,9 +9,8 @@
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
 
-		<IsMauiEmbedding>false</IsMauiEmbedding>
+		<IsMauiEmbedding>true</IsMauiEmbedding>
 		<IsMauiEmbedding Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android' OR $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios' OR $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst' OR $(TargetFramework.Contains('windows10'))">true</IsMauiEmbedding>
-		<DefineConstants Condition="$(IsMauiEmbedding)">$(DefineConstants);MAUI_EMBEDDING</DefineConstants>
 		<ExcludeWinAppSdkReference>true</ExcludeWinAppSdkReference>
 
 		<UnoSingleProject>true</UnoSingleProject>
@@ -71,9 +70,6 @@
 
 	<Choose>
 		<When Condition="$(IsMauiEmbedding)">
-			<PropertyGroup>
-				<DefineConstants>$(DefineConstants);MAUI_EMBEDDING</DefineConstants>
-			</PropertyGroup>
 		</When>
 		<Otherwise>
 			<ItemGroup>
