chore: add skia feature

--- a/src/Uno.Extensions.Maui.WinUI.Runtime.Skia/Uno.Extensions.Maui.WinUI.Runtime.Skia.csproj
+++ b/src/Uno.Extensions.Maui.WinUI.Runtime.Skia/Uno.Extensions.Maui.WinUI.Runtime.Skia.csproj
@@ -20,6 +20,9 @@
 		<UnoSingleProject>true</UnoSingleProject>
 		<OutputType>Library</OutputType>
 		<DefineConstants>$(DefineConstants);MAUI_RUNTIME_SKIA</DefineConstants>
+		<UnoFeatures>
+			SkiaRenderer;
+		</UnoFeatures>
 	</PropertyGroup>
 	<ItemGroup>
 		<Compile Include="..\Uno.Extensions.Maui.UI\Extensibility\Impl\MauiEmbeddingExtension.cs" Link="MauiEmbeddingExtension.cs" />
