--- a/doc/Learn/Storage/toc.yml
+++ b/doc/Learn/Storage/toc.yml
@@ -1,4 +1,6 @@
 - name: Overview
   href: xref:Uno.Extensions.Storage.Overview
+- name: Getting Started
+  href: xref:Uno.Extensions.Storage.GettingStarted
 - name: "How-To: Add Required Entitlements"
   href: xref:Uno.Extensions.Storage.HowToRequiredEntitlements
