docs(Storage): Add a Storage using Sample per function
More detailed Guides after this should then be added to the Chefs Reciept book, but I would at this point not know that it is reading from assets => future appdata nested files similar to my MvuxGallery is doing.

--- a/doc/Learn/Storage/toc.yml
+++ b/doc/Learn/Storage/toc.yml
@@ -1,4 +1,8 @@
 - name: Overview
   href: xref:Uno.Extensions.Storage.Overview
-- name: "How-To: Add Required Entitlements"
+- name: Getting Started with Storage Extensions
+  href: xref:Uno.Extensions.Storage.GettingStarted
+- name: How To: Handling Package files
+  href: xref:Uno.Extensions.Storage.HowToPackageFiles
+- name: How-To: Add Required Entitlements on Apple Platforms
   href: xref:Uno.Extensions.Storage.HowToRequiredEntitlements
