docs: add mvux faq section
(cherry picked from commit a5ed849cba6bd3bfb439aab456b460c1e2e648f8)

--- a/doc/Learn/Mvux/toc.yml
+++ b/doc/Learn/Mvux/toc.yml
@@ -31,4 +31,5 @@
       href: xref:Uno.Extensions.Mvux.Advanced.Commands
     - name: Inspecting the generated code
       href: xref:Uno.Extensions.Mvux.Advanced.InspectGeneratedCode
-
+- name: FAQ
+  href: xref:Uno.Extensions.Mvux.FAQ
