--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -88,6 +88,7 @@
 
 	<Import Project="winappsdk-workaround.targets" Condition="exists('winappsdk-workaround.targets') and $(TargetFramework.Contains('windows10'))" />
 	<Import Project="xamarinmac-workaround.targets" Condition="exists('xamarinmac-workaround.targets') and $(TargetFramework.ToLower().StartsWith('xamarin')) and $(TargetFramework.ToLower().Contains('mac'))" />
+	<Import Project="BannedSymbols.targets" />
 	<Import Project="Directory.UnoMetadata.targets" />
 
 	<ItemDefinitionGroup>
