--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -2,6 +2,7 @@
   <PropertyGroup>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="Microsoft.CodeAnalysis.BannedApiAnalyzers" Version="3.3.4" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="7.0.1" />
     <PackageVersion Include="DotNet.ReproducibleBuilds" Version="1.1.1" />
     <PackageVersion Include="FluentAssertions" Version="6.7.0" />
