chore: improve concurrent project build safety
Sometimes the **Packages > Build Extensions Packages** job fails:

	  Downloading from "https://uno-assets.platform.uno/logos/uno.png" to "D:\a\1\s\src\.icons\uno.png" (10901 bytes).
	##[error]src\Directory.UnoMetadata.targets(16,3): Error MSB3923: Failed to download file "https://uno-assets.platform.uno/logos/uno.png".
	The process cannot access the file 'D:\a\1\s\src\.icons\uno.png' because it is being used by another process.

The MSB3923 occurs because:

 1. The `DownloadAndSetPackageIcon` target runs as a post-`Build`
    target for *every* project in the solution, and

 2. Every invocation of `DownloadAndSetPackageIcon` uses the same
    `DownloadFile.DestinationFolder` location
    (`$(MSBuildThisFileDirectory)\.icons`), and

 3. Projects are built in parallel: the [`MSBuild@1`][0]
    `maximumCpuCount` input value is true ("Build in Parallel")
    *and also* `msbuildArguments` includes `/m` with no value [^0].

therefore the `DownloadAndSetPackageIcon` target can also be run
in parallel, which explains the MSB3923 file share errors.

Fix this by introducing a new `DownloadPackageIcon` target in
`before.Uno.Extensions.sln.targets`, and run this target in CI
*before* kicking off a normal build. The target will thus only ever
be executed *once*, and the rest of the build can assume it exists.

[0]: https://learn.microsoft.com/en-us/azure/devops/pipelines/tasks/reference/msbuild-v1?view=azure-pipelines
[1]: https://learn.microsoft.com/en-us/visualstudio/msbuild/building-multiple-projects-in-parallel-with-msbuild?view=vs-2022

[^0]: From the docs:

      > If you include this switch without specifying a value, MSBuild
      > uses up to the number of processors in the computer.
      > For more information, see [Building multiple projects in parallel][1].

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -23,6 +23,8 @@
 		<ShouldWriteErrorOnInvalidXaml>True</ShouldWriteErrorOnInvalidXaml>
 		<!-- Required by uno 6.0 (WinRT.Runtime.dll >= 2.2.0) -->
 		<WindowsSdkPackageVersion>10.0.19041.57</WindowsSdkPackageVersion>
+
+		<UnoIconUrl>https://uno-assets.platform.uno/logos/uno.png</UnoIconUrl>
 	</PropertyGroup>
 
 	<PropertyGroup>
