docs(KeyEquality): Re-Add KeyEquality Extension to the TOC and fix broken Link in ListStates Updating Operator docs

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -40,6 +40,9 @@
     - name: Validation
       href: Learn/Validation/toc.yml
       topicHref: xref:Uno.Extensions.Validation.Overview
+    - name: KeyEquality
+      href: Learn/KeyEquality/toc.yml
+      topicHref: xref:Uno.Extensions.KeyEquality.Concept
     - name: Walkthroughs
       href: Learn/Walkthrough/toc.yml
 - name: C# Markup
