chore: Fix trimmer warnings
Context: https://github.com/dotnet/runtime/issues/121629
Context: dea3b57078be96e4d6e345ebf18486cfa2e8e3a5 / 56a003bab6834a77edcb7d727b8e35315059c06a [may not exist]
Context: c3c4c7862a911b903f1cefc4d20bc3f029ea4b26

Enable `$(IsAotCompatible)`=true for the following projects:

  * `src/Uno.Extensions.Core/Uno.Extensions.Core.csproj`
  * `src/Uno.Extensions.Navigation/Uno.Extensions.Navigation.csproj`
  * `src/Uno.Extensions.Reactive/Uno.Extensions.Reactive.csproj`

Fix the following warnings-as-errors:

	src/Uno.Extensions.Core/DependencyInjection/ServiceCollectionExtensions.cs(24,3): error IL2091:
	  'TService' generic argument does not satisfy 'DynamicallyAccessedMemberTypes.PublicConstructors' in 'Microsoft.Extensions.DependencyInjection.Extensions.ServiceCollectionDescriptorExtensions.TryAddTransient<TService>(IServiceCollection)'.
	  The generic parameter 'TImplementation' of 'Uno.Extensions.ServiceCollectionExtensions.AddNamedSingleton<TService, TImplementation>(IServiceCollection, String)' does not have matching annotations.
	  The source value must declare at least the same requirements as those declared on the target location it is assigned to.
	src/Uno.Extensions.Navigation/MappedViewMap.cs(14,6): error IL2067:
	  'ViewModel' argument does not satisfy 'DynamicallyAccessedMemberTypes.PublicConstructors' in call to 'Uno.Extensions.Navigation.ViewMap.ViewMap(Type, Func<Type>, Type, DataMap, Type, Object)'.
	  The parameter 'ViewModel' of method 'Uno.Extensions.Navigation.MappedViewMap.MappedViewMap(Type, Func<Type>, Type, DataMap, Type, Type)' does not have matching annotations.
	  The source value must declare at least the same requirements as those declared on the target location it is assigned to.
	src/Uno.Extensions.Navigation/ViewMap.cs(66,5): error IL2087:
	  'ViewModel' argument does not satisfy 'DynamicallyAccessedMemberTypes.PublicConstructors' in call to 'Uno.Extensions.Navigation.ViewMap<TView>.ViewMap(Type, DataMap, Ty

--- a/src/Uno.Extensions.Navigation/Uno.Extensions.Navigation.csproj
+++ b/src/Uno.Extensions.Navigation/Uno.Extensions.Navigation.csproj
@@ -9,6 +9,8 @@
 
 		<!-- As we are InternalsVisibleTo, we disable some compatibility types that are not used by package itself. -->
 		<UnoExtensionsGeneration_DisableModuleInitializerAttribute>True</UnoExtensionsGeneration_DisableModuleInitializerAttribute>
+
+		<IsAotCompatible>true</IsAotCompatible>
 	</PropertyGroup>
 
 	<ItemGroup>
