--- a/src/Uno.Extensions.Reactive/Uno.Extensions.Reactive.csproj
+++ b/src/Uno.Extensions.Reactive/Uno.Extensions.Reactive.csproj
@@ -5,6 +5,8 @@
 		<Description>Reactive Extensions for the Uno Platform, UWP and WinUI</Description>
 		<ImplicitUsings>false</ImplicitUsings>
 
+		<IsAotCompatible>true</IsAotCompatible>
+
 		<!--
 			As we are InternalsVisibleTo(Uno.Extensions.Reactive.Tests), we disable some compatibility types that are not used by Reactive package itself.
 		-->
