chore: add JsonSerializerIsReflectionEnabledByDefault

--- a/src/Uno.Extensions.Serialization.Tests/Uno.Extensions.Serialization.Tests.csproj
+++ b/src/Uno.Extensions.Serialization.Tests/Uno.Extensions.Serialization.Tests.csproj
@@ -4,6 +4,8 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 		<Nullable>disable</Nullable>
+		<!-- Disable JSON reflection to test AOT-compatible serialization -->
+		<JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
 	</PropertyGroup>
 
 	<ItemGroup>
