--- a/.github/workflows/azure-static-app.yml
+++ b/.github/workflows/azure-static-app.yml
@@ -26,10 +26,10 @@ jobs:
           fetch-depth: 0 # Required for gitversion
           submodules: true
 
-      - name: Setup dotnet 9.0.308
+      - name: Setup .NET SDK
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: '9.0.308'
+          global-json-file: global.json
 
       - uses: dotnet/nbgv@f088059084cb5d872e9d1a994433ca6440c2bf72 # v0.4.2
         id: nbgv
