--- a/src/Uno.Extensions.Core.Tests/Uno.Extensions.Core.Tests.csproj
+++ b/src/Uno.Extensions.Core.Tests/Uno.Extensions.Core.Tests.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
+		<OutputType>Exe</OutputType>
 		<IsPackable>false</IsPackable>
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<CompilerGeneratedFilesOutputPath>obj/g</CompilerGeneratedFilesOutputPath>
@@ -10,10 +11,10 @@
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" />
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="MSTest.TestAdapter" />
 		<PackageReference Include="MSTest.TestFramework" />
-		<PackageReference Include="coverlet.collector" />
+		<PackageReference Include="Microsoft.Testing.Extensions.TrxReport" />
+		<PackageReference Include="Microsoft.Testing.Extensions.HangDump" />
 		<PackageReference Include="System.Collections.Immutable" VersionOverride="8.0.0" />
 		<!--For local usage we use the most recent version-->
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
