--- a/src/Uno.Extensions.Navigation.Tests/Uno.Extensions.Navigation.Tests.csproj
+++ b/src/Uno.Extensions.Navigation.Tests/Uno.Extensions.Navigation.Tests.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
+		<OutputType>Exe</OutputType>
 		<IsPackable>false</IsPackable>
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<CompilerGeneratedFilesOutputPath>obj/g</CompilerGeneratedFilesOutputPath>
@@ -9,10 +10,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="MSTest.TestAdapter" />
 		<PackageReference Include="MSTest.TestFramework" />
-		<PackageReference Include="coverlet.collector" />
+		<PackageReference Include="Microsoft.Testing.Extensions.TrxReport" />
+		<PackageReference Include="Microsoft.Testing.Extensions.HangDump" />
 		<PackageReference Include="Moq" />
 	</ItemGroup>
 
