--- a/src/Uno.Extensions.Reactive.Testing/Uno.Extensions.Reactive.Testing.csproj
+++ b/src/Uno.Extensions.Reactive.Testing/Uno.Extensions.Reactive.Testing.csproj
@@ -2,9 +2,15 @@
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
+		<OutputType>Library</OutputType>
 
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
+
+		<!-- This is a utility library for tests. It doesn't contain tests by itself. -->
+		<IsTestProject>false</IsTestProject>
+		<IsTestingPlatformApplication>false</IsTestingPlatformApplication>
+		<EnableMSTestRunner>false</EnableMSTestRunner>
 
 		<!--
 			As we are InternalsVisibleTo(Uno.Extensions.Reactive.Tests), we disable some compatibility types that are not used by Reactive package itself.
@@ -15,10 +21,9 @@
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" />
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="MSTest.TestAdapter" />
 		<PackageReference Include="MSTest.TestFramework" />
-		<PackageReference Include="coverlet.collector" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="System.Collections.Immutable" />
 	</ItemGroup>
 
