--- a/src/Uno.Extensions.Serialization.Tests/Uno.Extensions.Serialization.Tests.csproj
+++ b/src/Uno.Extensions.Serialization.Tests/Uno.Extensions.Serialization.Tests.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 		<Nullable>disable</Nullable>
+		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -14,7 +15,8 @@
 		<PackageReference Include="Moq" />
 		<PackageReference Include="MSTest.TestAdapter"  />
 		<PackageReference Include="MSTest.TestFramework"  />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" />
+		<PackageReference Include="Microsoft.Testing.Extensions.TrxReport" />
+		<PackageReference Include="Microsoft.Testing.Extensions.HangDump" />
 		<PackageReference Include="FluentAssertions" />
   </ItemGroup>
 
