--- a/src/Uno.Extensions.Serialization/Uno.Extensions.Serialization.csproj
+++ b/src/Uno.Extensions.Serialization/Uno.Extensions.Serialization.csproj
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Uno.Extensions.Core\Uno.Extensions.Core.csproj" />
+		<ProjectReference Include="..\Uno.Extensions.Hosting\Uno.Extensions.Hosting.csproj" />
 	</ItemGroup>
 
 </Project>
