--- a/src/Uno.Extensions.Core/Uno.Extensions.Core.csproj
+++ b/src/Uno.Extensions.Core/Uno.Extensions.Core.csproj
@@ -11,8 +11,15 @@
 		<IsAotCompatible>true</IsAotCompatible>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" />
+		<!--
+				WARNING : DO NOT ADD ANY DEPENDENCY HERE (even from the Microsoft.Extensions.* packages)
+
+				The core package should only contain the strict minimum dependencies to avoid bloating the dependency tree of all packages depending on it.
+				The only approved dependency here is Microsoft.Extensions.Logging.Abstractions.
+
+				If ever a new dependency is required here, it should be an `.Abstractions` package, and has to be discussed and approved by the Uno Extensions maintainers team.
+		-->
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
 		<PackageReference Include="System.Collections.Immutable" />
 		<PackageReference Include="System.Threading.Tasks.Extensions" />
 	</ItemGroup>
